# ndk-basics

./: settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/ir/mrahimy/myndkapplication/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: helloworld-c.cpp  native-abi.cpp  native-callme.cpp  native-concat.cpp  native-exception.cpp  native-gl.cpp  native-lock.cpp  native-mutable.cpp  native-thread.cpp  native-throw.cpp  plasma.cpp
app/src/main/java/ir/mrahimy/myndkapplication/: DataClass.java  ExceptionistClass.java  First2Fragment.java  FirstFragment.kt  IntWrapper.java  MainGlActivity.kt  MainKotlinActivity.kt  MainNativeCallActivity.java  MainNativeCallActivity.kt  MainStringActivity.java  PhoneNumber.java  PlasmaActivity.kt  Second2Fragment.java  SecondFragment.kt
app/src/main/res/layout/: activity_main_java.xml  activity_main_kotlin.xml  activity_main_string.xml  content_main_java.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/ir/mrahimy/myndkapplication/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
